fix issue with header not showing if scrolling down just a bit then scrolling up, tighten up padding on large header nav

--- a/web/assets/scss/components/_header.scss
+++ b/web/assets/scss/components/_header.scss
@@ -39,7 +39,7 @@ body {
   }
   @include media-lg {
     height: $header-height-lg;
-    padding: 50px #{$padding-lg - 16px} $padding-lg $padding-lg;
+    padding: 40px #{$padding-lg - 16px} 50px $padding-lg;
   }
 }
 
