--- a/web/assets/scss/helpers/_variables.scss
+++ b/web/assets/scss/helpers/_variables.scss
@@ -31,7 +31,7 @@ $portrait-padding: 133.33%;
 $header-height: 94px;
 $header-height-sm: 112px;
 $header-height-md: 140px;
-$header-height-lg: 168px;
+$header-height-lg: 154px;
 
 // Animation
 $ease: ease-out;
